--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
 NODE_ENV=test
-MONGO_DB=mongodb+srv://publiclyviewed:hagiang2002@practicecluster.hzok4.mongodb.net/
+MONGO_DB=mongodb+srv://publiclyviewed:<password>@practicecluster.hzok4.mongodb.net/
